--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,8 @@
     hr {
         border: 4px solid #A2BF91;
         background-color: #A2BF91;
+        max-width: 95%;
+        width: 100%;
     }
 
     p , ul>li{
@@ -168,10 +170,13 @@
     }
 
     .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         flex: content;
         align-self: center;
         justify-self: center;
-
         background: rgba(162, 191, 145, 0.6);
         border-radius: 30px;
 
@@ -209,6 +214,29 @@
 
     #tech-stack {
         height: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    #tech-stack > .tech-stack-container{
+        height: 100px;
+    }
+
+    #icons-div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: center;
+
+        height: fit-content;
+        width: 100%;
+    }
+
+    #icons-div > .tech-stack-container {
+        height: 85px;
+        margin: 5px;
     }
 
     #contact-me-graphic{
@@ -269,10 +297,12 @@
     button { 
         align-self: center;
         width: fit-content;
-        height: 40px;
 
-        margin: 10px;
-        padding: 5px 20px 5px 20px;
+        text-align: center;
+        height: 30px;
+
+        margin: 5px;
+        padding: 5px 10px 5px 10px;
 
         background: #FFD38B;
         
@@ -280,16 +310,25 @@
         border-radius: 40px;
 
         font-family: 'VT323';
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         text-align: center;
         text-decoration: none;
         
         color: #2D3825;
     }
 
+    .button-div {
+        bottom: 0;
+        width: 100%;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
     button>a{
         text-decoration: none;
         color: #2D3825;
+        align-self: center;
     }
     
     button:hover {
@@ -360,6 +399,83 @@
     #thankyougraphic>img {
         width: 90%;
     }
+
+    #project-media-container{
+        max-width: 90%;
+        width: 100%;
+        background-color: #EBF2E6;
+        border: 10px solid #A2BF91;
+        border-radius: 10px;
+        height: 40%;
+        margin: 10px 0 10px 0;
+        border-radius: 10px;
+    }
+
+    #project-media-container>iframe { 
+        height: 100%;
+        width: 100%;
+    }
+    
+
+    #project-display {
+        min-width: 550px;
+    }
+
+
+    .project-tech-stack {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 15%;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .tech-stack-container {
+        z-index: 10;
+        height: 80%;
+        aspect-ratio: 1;
+        border-radius: 10px;
+
+        background-color: #EBF2E6;
+    }
+
+    #project-description{ 
+        margin-bottom: 20px;
+        width: 90%;
+        align-self: center;
+    }
+
+    .tech-stack-icon {
+        height: 100%;
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .tech-stack-icon > svg {
+        aspect-ratio: 1;
+        width: 80%;
+    }
+
+    ::-webkit-scrollbar {
+        width: 15px;
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px #2D3825;
+        /* border-radius: 10px; */
+      }
+      
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #FFD38B;
+        border-radius: 10px;
+      }
     
 }
 
