--- a/styles/index.css
+++ b/styles/index.css
@@ -118,8 +118,8 @@
     .quarter-view-port {
         box-sizing: content-box;
         
-        width: 260px;
-        max-width: 50%;
+        width: 50%;
+        min-width: 250px;
         height: 100%;
         
         display: flex;
@@ -127,8 +127,7 @@
         
         align-items: center;
         justify-content: space-evenly;
-        
-        margin: 20px;
+    
         padding: 10px;
     }
 
@@ -209,7 +208,7 @@
 
 
     #skills, #tech-stack{
-        width: 95%;
+        width: 90%;
     }
 
     #tech-stack {
@@ -217,6 +216,11 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+    }
+    #tech-stack>ul {
+        padding-left: 20px;
+        max-height: 260px;
+        overflow-y: auto;
     }
     
     #tech-stack > .tech-stack-container{
@@ -399,67 +403,62 @@
     #thankyougraphic>img {
         width: 90%;
     }
+     
+    #project-repo-link>p:hover {
+        color: #FFD38B;
+    }
 
-    #project-media-container{
-        max-width: 90%;
-        width: 100%;
+    .project-media-container{
+        aspect-ratio: 16 / 9;
         background-color: #EBF2E6;
         border: 10px solid #A2BF91;
         border-radius: 10px;
-        height: 40%;
-        margin: 10px 0 10px 0;
+        height: 50%;
+        margin-right: 10px;
+        margin-bottom: 10px;
         border-radius: 10px;
     }
 
-    #project-media-container>iframe { 
+    .project-media-container>iframe { 
         height: 100%;
         width: 100%;
+    }
+
+    #Projects {
+        z-index: 20;
+        /* background: red; */
+        width: 10px;
+        height: 10px;
+    }
+
+    #tech-stack {
+        height: ;
     }
     
+    #projectSection {
+        height: calc(100vh - 100);
 
-    #project-display {
-        min-width: 550px;
-    }
-
-
-    .project-tech-stack {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        height: 15%;
-        width: 100%;
-        margin-bottom: 20px;
-    }
-
-    .tech-stack-container {
-        z-index: 10;
-        height: 80%;
-        aspect-ratio: 1;
-        border-radius: 10px;
-
-        background-color: #EBF2E6;
-    }
-
-    #project-description{ 
-        margin-bottom: 20px;
-        width: 90%;
         align-self: center;
+        justify-self: center;
+        justify-content: space-around;
     }
 
-    .tech-stack-icon {
-        height: 100%;
-        width: 100%;
+    .project_containter {
+        min-width: 900px;
+        width: 85vw;
+        min-height: 650px;
+        height: 80vh;
+        background: rgba(162, 191, 145, 0.6);
 
         display: flex;
-        justify-content: center;
-        align-content: center;
-    }
+        flex-direction: row;
+        
+        padding: 25px;
+        border-radius: 30px;
+    }   
 
-    .tech-stack-icon > svg {
-        aspect-ratio: 1;
-        width: 80%;
-    }
 
     ::-webkit-scrollbar {
         width: 15px;
